Add entrace to big top with blurb section.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -30,8 +30,46 @@
         </div>
       </div>
       <div class="big-top"></div>
-      <nav></nav>
+      <nav></nav> <!-- TODO: fill this in. -->
+      <div class="entrance"></div>
     </header>
+
+    <section class="about">
+      <div class="container">
+        <div class="blurb">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+        </div>
+        <div class="date-time-location">
+          <ul>
+            <li>Friday June 16<sup>th</sup></li>
+            <li>9:00pm–5:00am</li>
+            <li>Homerton College</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="sponsorship">
+    </section>
+
+    <section class="charities">
+    </section>
+
+    <section class="ticketing">
+    </section>
+
+    <section class="ents">
+    </section>
+
+    <section class="food-and-drink">
+    </section>
+
+    <footer>
+    </footer>
   </div>
 
   <!-- Load scripts after the body to speed up loading. -->
