Mostly working reponsive navbar.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-  <meta name="theme-color" content="rgb(36, 41, 53)" />
+  <meta name="theme-color" content="rgb(152, 45, 8)" />
   <!-- TODO: <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta name="copyright" content="" -->
@@ -14,7 +14,7 @@
   <!-- TODO: <link rel="icon" href="favicon.png" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png" /> -->
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Arima+Madurai:500">
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/core.css" />
 </head>
@@ -30,7 +30,25 @@
         </div>
       </div>
       <div class="big-top"></div>
-      <nav></nav> <!-- TODO: fill this in. -->
+      <div class="canopy">
+        <nav>
+          <ul>
+            <li><a href="#" data-anchor="sponsorship">Sponsors</a></li>
+            <li><a href="#" data-anchor="charities">Charity</a></li>
+            <li><a href="#" data-anchor="ticketing">Ticketing</a></li>
+            <li><a href="#" data-anchor="ents">Ents</a></li>
+            <li><a href="#" data-anchor="food-and-drink">Food &amp; Drink</a></li>
+          </ul>
+          <div class="small hamburger">
+            <input type="checkbox" id="hamburger-nav" />
+            <label for="hamburger-nav">
+              <div class="bar diagonal-1"></div>
+              <div class="bar horizontal"></div>
+              <div class="bar diagonal-2"></div>
+            </label>
+          </div>
+        </nav>
+      </div>
       <div class="entrance"></div>
     </header>
 
@@ -54,27 +72,72 @@
     </section>
 
     <section class="sponsorship">
+      <div class="container">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+      </div>
     </section>
 
     <section class="charities">
+      <div class="container">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+      </div>
     </section>
 
     <section class="ticketing">
+      <div class="container">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+      </div>
     </section>
 
     <section class="ents">
+      <div class="container">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+      </div>
     </section>
 
     <section class="food-and-drink">
+      <div class="container">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+      </div>
     </section>
 
     <footer>
+      <div class="container">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+      </div>
     </footer>
   </div>
 
   <!-- Load scripts after the body to speed up loading. -->
   <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+  <!-- TODO: Add hosted version of ScrollMagic. -->
   <script src="js/main.js"></script>
 </body>
 </html>
