Basic committee footer.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -19,16 +19,17 @@
   <link rel="stylesheet" href="css/core.css" />
 </head>
 <body>
-  <div class="wrapper">
+  <div class="overflow-wrapper">
     <header>
       <img class="moon" src="img/moon.png" />
-      <div class="container">
+      <div class="center">
         <img class="logo" src="img/logo.svg" alt="Logo." />
         <div class="title">
           <h1>Homerton</h1>
           <h2>May Ball 2017</h2>
         </div>
       </div>
+      <div class="sign"></div>
       <div class="big-top"></div>
       <div class="canopy">
         <nav>
@@ -53,7 +54,7 @@
     </header>
 
     <section id="about">
-      <div class="container">
+      <div class="center">
         <div class="blurb">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -73,7 +74,7 @@
 
     <div class="ticket-top"></div>
     <section id="ticketing">
-      <div class="container">
+      <div class="center">
         <div class="blurb">
           <!-- TODO: Ticket blurbs. -->
           Come one, come all! Tickets will be released at 54:45 on 31rd Blobtember.
@@ -85,8 +86,7 @@
             </tr>
             <tr>
               <td colspan="2" class="ticket">
-                Come to the party. And stuff and stuff and stuff. And stuff and stuff and stuff.
-                And stuff and stuff and stuff. And stuff and stuff and stuff.
+
               </td>
             </tr>
             <tr>
@@ -95,8 +95,8 @@
             </tr>
             <tr>
               <td colspan="2" class="ticket">
-                Come to the party, hastily. And stuff and stuff and stuff. And stuff and stuff and
-                stuff. And stuff and stuff and stuff. And stuff and stuff and stuff.
+                Be the first to experience the magic, entering the ball an hour <!-- TODO: check
+                --> before general entrance.
               </td>
             </tr>
             <tr>
@@ -105,8 +105,8 @@
             </tr>
             <tr>
               <td colspan="2" class="ticket">
-                Come to the party on a full stomach. And stuff and stuff and stuff. And stuff and
-                stuff and stuff. And stuff and stuff and stuff.
+                Enjoy a resplendant three-course dinner in Homerton's Fellows' Dining Room prior
+                to entering the ball.
               </td>
             </tr>
           </table>
@@ -117,7 +117,7 @@
     <div class="ticket-bottom"></div>
 
     <section id="workers">
-      <div class="container">
+      <div class="center">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -143,7 +143,7 @@
     </section>
 
     <section id="ents">
-      <div class="container">
+      <div class="center">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -176,7 +176,7 @@
     </section>
 
     <section id="sponsorship">
-      <div class="container">
+      <div class="center">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -195,7 +195,7 @@
     </section>
 
     <section id="charities">
-      <div class="container">
+      <div class="center">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -214,22 +214,122 @@
     </section>
 
     <footer>
-      <div class="container">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
-        </p>
-      </div>
+      <div class="center">
+        <div class="team">
+          <!-- Support team. -->
+          <div class="contact">
+            <img src="" />
+            <h5>President</h5>
+            <label>Vicki Hodgson</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Vice-President</h5>
+            <label>Rachel Sweet</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Treasurer</h5>
+            <label>Ben Butt</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>HUS Representative</h5>
+            <label>Will Hewstone</label>
+          </div>
+        </div>  <!-- /team -->
+
+        <div class="team">
+          <!-- Creative team. -->
+          <div class="contact">
+            <img src="" />
+            <h5>Design Officer</h5>
+            <label>Ceri Moss</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Design Officer</h5>
+            <label>Gabriela Martin</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Publicity and Sponsorship Officer</h5>
+            <label>Melissa Diaz</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Theme Coordinator</h5>
+            <label>Suroor Rahimtoola</label>
+          </div>
+        </div>  <!-- /team -->
+
+        <div class="team">
+          <!-- Consumables team. -->
+          <div class="contact">
+            <img src="" />
+            <h5>Ents Officer</h5>
+            <label>Nicole Lau</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Ents Officer</h5>
+            <label>Zoë Carpenter</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Food &amp; Drinks Officer</h5>
+            <label>Rowenna McGill</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Food &amp; Drinks Officer</h5>
+            <label>Caitlin Whitby</label>
+          </div>
+        </div>  <!-- /team -->
+
+        <div class="team">
+          <!-- Strategy team. -->
+          <div class="contact">
+            <img src="" />
+            <h5>Logistics Officer</h5>
+            <label>Dillan Saunders</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Security Officer</h5>
+            <label>Chloe Budd</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Personnel Officer</h5>
+            <label>Eloïse Sinclair</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Personnel Officer</h5>
+            <label>Kaylyn Chan</label>
+          </div>
+        </div>  <!-- /team -->
+
+        <div class="team">
+          <!-- Tech team. -->
+          <div class="contact">
+            <img src="" />
+            <h5>IT Officer</h5>
+            <label>Ben King</label>
+          </div>
+          <div class="contact">
+            <img src="img/contacts/sh.jpg" />  <!-- TODO: scale this down to save bandwidth. -->
+            <h5>Webmaster</h5>
+            <label>Sam Hubbard</label>
+          </div>
+          <div class="contact">
+            <img src="" />
+            <h5>Ticketing Officer</h5>
+            <label>Eunmi Ha</label>
+          </div>
+        </div>  <!-- /team -->
+      </div> <!-- /center -->
     </footer>
   </div>
 
