--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -22,14 +22,15 @@
   <div class="overflow-wrapper">
     <header>
       <img class="moon" src="img/moon.png" />
-      <div class="center">
-        <img class="logo" src="img/logo.svg" alt="Logo." />
-        <div class="title">
+      <div class="center logo">
+        <img class="logomark" src="img/logo.svg" alt="Logo." />
+        <div class="logotype">
           <h1>Homerton</h1>
           <h2>May Ball 2017</h2>
         </div>
       </div>
       <div class="sign"></div>
+      <div class="trees"></div>
       <div class="big-top"></div>
       <div class="canopy">
         <nav>
@@ -334,11 +335,16 @@
   </div>
 
   <!-- Load scripts after the body to speed up loading. -->
-  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-  <!-- TODO: Add hosted version of ScrollMagic. -->
+  <!-- TODO: remove above script in production. -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/plugins/CSSPlugin.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/easing/EasePack.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenLite.min.js"></script>
+  <!-- TODO: add hosted version of ScrollMagic + GSAP. -->
   <script src="js/main.js"></script>
 </body>
 </html>
