More general styling and animation.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -5,9 +5,9 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <meta name="theme-color" content="rgb(152, 45, 8)" />
-  <!-- TODO: <meta name="description" content="" />
-  <meta name="keywords" content="" />
-  <meta name="copyright" content="" -->
+  <meta name="description" content="Homerton May Ball 2017: A Night at the Circus" />
+  <meta name="keywords" content="May ball circus tickets party Homerton college Cambridge 2017" />
+  <!-- TODO: <meta name="copyright" content="" /> -->
 
   <title>Homerton May Ball 2017</title>
 
@@ -21,8 +21,8 @@
 <body>
   <div class="overflow-wrapper">
     <header>
-      <img class="moon" src="img/moon.png" />
-      <div class="center logo">
+      <div class="moon"></div>
+      <div class="logo">
         <img class="logomark" src="img/logo.svg" alt="Logo." />
         <div class="logotype">
           <h1>Homerton</h1>
@@ -76,6 +76,7 @@
     <div class="ticket-top"></div>
     <section id="ticketing">
       <div class="center">
+        <h3>Tickets</h3>
         <div class="blurb">
           <!-- TODO: Ticket blurbs. -->
           Come one, come all! Tickets will be released at 54:45 on 31rd Blobtember.
@@ -86,8 +87,9 @@
               <td>£115</td>
             </tr>
             <tr>
-              <td colspan="2" class="ticket">
-
+              <td colspan="2" class="ticket-blurb">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.
               </td>
             </tr>
             <tr>
@@ -95,7 +97,7 @@
               <td>£135</td>
             </tr>
             <tr>
-              <td colspan="2" class="ticket">
+              <td colspan="2" class="ticket-blurb">
                 Be the first to experience the magic, entering the ball an hour <!-- TODO: check
                 --> before general entrance.
               </td>
@@ -105,9 +107,9 @@
               <td>£155</td>
             </tr>
             <tr>
-              <td colspan="2" class="ticket">
-                Enjoy a resplendant three-course dinner in Homerton's Fellows' Dining Room prior
-                to entering the ball.
+              <td colspan="2" class="ticket-blurb">
+                Enjoy a resplendant three-course <!-- TODO: check --> dinner in Homerton's Fellows'
+                Dining Room prior to entering the ball.
               </td>
             </tr>
           </table>
@@ -119,6 +121,7 @@
 
     <section id="workers">
       <div class="center">
+        <h3>Workers</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -145,6 +148,7 @@
 
     <section id="ents">
       <div class="center">
+        <h3>Ents &amp; Food</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -178,6 +182,7 @@
 
     <section id="sponsorship">
       <div class="center">
+        <h3>Sponsors</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -197,6 +202,7 @@
 
     <section id="charities">
       <div class="center">
+        <h3>Charity</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
