Improve styling of ents section.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -94,7 +94,7 @@
             </tr>
             <tr>
               <td>Queue Jump:</td>
-              <td>£135</td>
+              <td>£130</td>
             </tr>
             <tr>
               <td colspan="2" class="ticket-blurb">
@@ -149,6 +149,7 @@
     <section id="ents">
       <div class="center">
         <h3>Ents &amp; Food</h3>
+        <div class="cannon"></div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -156,20 +157,7 @@
           voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
           cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
         </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
-        </p>
+        <div class="ball"></div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
           ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -222,6 +210,7 @@
 
     <footer>
       <div class="center">
+        <h3>Committee</h3>
         <div class="team">
           <!-- Support team. -->
           <div class="contact">
@@ -326,7 +315,7 @@
             <label>Ben King</label>
           </div>
           <div class="contact">
-            <img src="img/contacts/sh.jpg" />  <!-- TODO: scale this down to save bandwidth. -->
+            <img src="" />  <!-- TODO: scale this down to save bandwidth. -->
             <h5>Webmaster</h5>
             <label>Sam Hubbard</label>
           </div>
